objects/User.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>SUBSTITUTE(  Department ,&quot;ＳＩ営本　&quot; ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部署略称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasAccessJapanAccountContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the user has access to Japanese Accounts / Contacts.</description>
        <label>HasAccessJapanAccountContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAsiaUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAsiaUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsJapanUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the user appears in Sales Person / Sales Assistant lookups in Japanese QT.</description>
        <label>IsJapanUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RetiredDate__c</fullName>
        <description>2016/02/23追加</description>
        <label>退職日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RetiredFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2016/02/23追加</description>
        <label>退職フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesArea__c</fullName>
        <label>地域</label>
        <picklist>
            <picklistValues>
                <fullName>010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>045</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>049</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0Z1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>111</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>UserCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ユーザコード</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserSign__c</fullName>
        <label>UserSign</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>jpcsm_hk__Num_Active_user__c</fullName>
        <label>有効ライセンス数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ALLUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>UserCode__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>JRI</value>
        </filters>
        <label>JRI</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LOCALE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>有効ユーザ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System Admin</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>システム管理者</value>
        </filters>
        <label>管理者ユーザ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AllUsers_ADD_1W</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UserCode__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>SalesArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <label>すべてのユーザ　登録(1週前)</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AllUsers_ADD_1W_chk</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UserCode__c</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>SalesArea__c</columns>
        <columns>HasAccessJapanAccountContact__c</columns>
        <columns>IsJapanUser__c</columns>
        <columns>IsAsiaUser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <label>すべてのユーザ　登録(1週前)　chk</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AllUsers_ALL</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UserCode__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <label>すべてのユーザ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AllUsers_UPD_1D</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UserCode__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>N_DAYS_AGO:1</value>
        </filters>
        <label>すべてのユーザ　修正(1日前)</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AllUsers_UPD_1W</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UserCode__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <label>すべてのユーザ　修正(1週前)</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AllUsers_UPD_1W_chk</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UserCode__c</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>SalesArea__c</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>HasAccessJapanAccountContact__c</columns>
        <columns>IsJapanUser__c</columns>
        <columns>IsAsiaUser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <label>すべてのユーザ　修正(1週前)　chk</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>EXCEL</fullName>
        <booleanFilter>1 or 2 or 3 or 4 or 5 or 6 or 7 or 8</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>tokamoto@,nmoriike@,oku@,naishyou@,oonuki@,kokazaki@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>aonimaru@,kmiyaji@,motoki@,kachi@,myamamot@,makatoh@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>akoike@,akajihar@,mnagata@,syatouge@,rkuboniw@,enagatan@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>yhirai@,aimai@,eimai@,sayamagu@,enojiri@,miyamae@,cisetani@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>yyuasa@,akawabat@,yasui@,iiida@,ykanmei@,syashiki@,yorimits@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>ubugata@,mmizoguc@,yukintan@,hmiyairi@,minakamu@,ytanabe@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>mhirai@,fkikuchi@,ysajiki@,yukyamad@,moyoshik@,ohkuma@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>fyosimur@,mkyo@,yoshinag@</value>
        </filters>
        <label>★保守_EXCEL出力設定</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_ohara</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EXCEL1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>kyajima@,knishika@,ayookawa@,chhigaki@,amatai@,minakamu@,tide@,nyamamot@</value>
        </filters>
        <label>●サービス_EXCEL出力権限</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_ohara</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ID_asia</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>FULL_NAME</columns>
        <columns>UserCode__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>IsAsiaUser__c</columns>
        <columns>IsJapanUser__c</columns>
        <columns>HasAccessJapanAccountContact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsAsiaUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>jeolasia.com.sg,jeolmal.com</value>
        </filters>
        <label>☆asia　user　IsAsiaUser=True</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>ID_chiiki</fullName>
        <columns>FULL_NAME</columns>
        <columns>UserCode__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>SalesArea__c</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SalesArea__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>★地域指定あり</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_Infomation_System_G</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ID_korea</fullName>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>FULL_NAME</columns>
        <columns>UserCode__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>LANGUAGE</columns>
        <columns>EMAIL_ENCODING</columns>
        <columns>TIMEZONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>jeol.co.kr</value>
        </filters>
        <label>☆korea</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SVC_1</fullName>
        <booleanFilter>1 or 2 or 3 or 4 or 5 or 6 or 7 or 8 or 9 or 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>kyajima@,itoshima@,nmoriike@,naishyou@,ykanmei@,murakawa@,mayikeda@,hisaito@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>knishika@,ayookawa@,myosimot@,kumamoto@,ina@,dawatana@,tinaba@,yoikawa@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>hshimada@,takwatan@,masaki@,hyoshimu@,iyamauch@,toomura@,nnakanis@,tjoh@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>mitnakam@,tkurihar@,chhigaki@,amatai@,yuktanak@,karaki@,kokazaki@,aonimaru@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>tomkobay@,kmiyaji@,tsuchiya@,kishikaw@,aimai@,eimai@,noyamamo@,sayamagu@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>yuono@,miyamae@,morichik@,htaniguc@,mfukushi@,cisetani@,akawabat@,yyuasa@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>tnishigu@,myamato@,yaoi@,mmiyata@,hnomura@,iiida@,ykanmei@,syashiki@,ubugata@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>hmatsumo@,mmizoguc@,ykume@,minakamu@,harigaya@,myazawa@,maswatan@,kaztanak@</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>tide@,musha@,kimiaki@,ynakashi@,takagi@,ishiyama@,dkato@,kyanagi@,fnakamur@,ikam</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>startsWith</operation>
            <value>tenomoto@,masaosat@,nyamamot@,kishibas@,komori@,mtaniguc@,nkashima@,kyamane@</value>
        </filters>
        <label>●SVC履歴1</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_ohara</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>